Revision history for {{$dist->name}}

{{$NEXT}}

    - Ignore PodCoverageTests which in DZ2 was split from the now
      obsolete PodTests.

0.14 2010-03-31 14:23:02

    - Depend on Dist::Zilla::Plugin::MakeMaker::Awesome

0.13 2010-03-27 21:08:19

    - Use Dist::Zilla::Plugin::CompileTests

    - Use MakeMaker by default in my dists. Hailo can do its own
      thing.

0.12 2010-03-27 18:09:41

    - Don't use Dist::Zilla::Plugin::OverridableMakeMaker by
      default. I only use this for Hailo.

0.11 2010-03-22 11:26:50

    - Also noindex the example and examples directories if they exist.

0.10 2010-03-20 19:12:07

    - Use the public RT urls instead of the private ones that require
      you to log in.

0.09 2010-03-13 12:43:29

    - Support a bugtracker option for setting github, rt or any other
      trackers in META.*

0.08 2010-03-13 07:41:31

    - Replace MakeMaker with OverridableMakeMaker

0.07 2010-03-12 22:37:51

    - Correctly declare dependencies for this module

    - Flesh out POD documentation for the module.

0.06 2010-03-12 20:11:40

    - Use my shiny new VersionFromPrev plugin to manage releases

0.05 2010-03-12 18:45:40

    - Silly error in previous releases broke all Git stuff

0.04 2010-03-12 18:43:57

    - Test CPAN release

0.03 2010-03-12 18:42:57

    - Another shot at making Git work, now with
      Dist::Zilla::PluginBundle::Git

0.02 2010-03-12 18:37:30

    - Also use Git::Commit in my configuration

0.01 2010-03-12 18:35:44

    - Forked from The Dist::Zilla::PluginBundle::RJBS with settings
      AVAR likes