@@ -5,6 +5,8 @@ Revision history for {{$dist->name}}
     - Ignore PodCoverageTests which in DZ2 was split from the now
       obsolete PodTests.
 
+    - Support homepage=* parameter
+
 0.14 2010-03-31 14:23:02
 
     - Depend on Dist::Zilla::Plugin::MakeMaker::Awesome
